<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:titleTextColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="?attr/actionBarSize"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/readCheckBox"
        android:layout_marginBottom="@dimen/mp_10"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:id="@+id/pageTitle"
                android:text="Agreement"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/agreementTextBold1"
                android:text="@string/bold1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_max"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText1"
                android:text="@string/text1"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementTextBold2"
                android:text="@string/bold2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText2"
                android:text="@string/text2"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementTextBold3"
                android:text="@string/bold3"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText3"
                android:text="@string/text3"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementTextBold4"
                android:text="@string/bold4"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText4"
                android:text="@string/text4"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementTextBold5"
                android:text="@string/bold5"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText5"
                android:text="@string/text5"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementTextBold6"
                android:text="@string/bold6"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText6"
                android:text="@string/text6"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementTextBold7"
                android:text="@string/bold7"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText7"
                android:text="@string/text7"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementTextBold8"
                android:text="@string/bold8"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText8"
                android:text="@string/text8"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementTextBold9"
                android:text="@string/bold9"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText9"
                android:text="@string/text9"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementTextBold10"
                android:text="@string/bold10"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText10"
                android:text="@string/text10"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementTextBold11"
                android:text="@string/bold11"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText11"
                android:text="@string/text11"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementTextBold12"
                android:text="@string/bold12"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText12"
                android:text="@string/text12"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementTextBold13"
                android:text="@string/bold13"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/mp_10"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/agreementText13"
                android:text="@string/text13"
                android:layout_marginTop="@dimen/mp_5"
                android:layout_marginStart="@dimen/mp_10"
                android:layout_marginEnd="@dimen/mp_10"
                android:layout_marginBottom="@dimen/mp_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

        </LinearLayout>

    </ScrollView>



    <CheckBox
        android:id="@+id/readCheckBox"
        android:layout_marginTop="@dimen/mp_10"
        android:layout_marginStart="@dimen/mp_10"
        android:layout_marginEnd="@dimen/mp_10"
        android:layout_marginBottom="@dimen/mp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/aggreeBtnLayout"
        android:text="@string/I_have_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/aggreeBtnLayout"
        android:layout_marginBottom="@dimen/mp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancleBtn"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/mp_10"
            android:layout_marginEnd="@dimen/mp_10"
            android:text="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmBtn"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="@dimen/mp_10"
            android:layout_marginEnd="@dimen/mp_10"
            android:backgroundTint="@color/magenta"
            android:text="I Agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

